k8s/my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: my-app
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: my-app
  template:
    metadata:
      labels:
        service: my-app
    spec:
      containers:
      - name: u-container
        image: belalelnady/solution-plus
        ports:
          - containerPort: 4444
            protocol: TCP
      restartPolicy: Always
