k8s/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    service: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: mysql:8.0.41
          args:
            - --default-authentication-plugin=mysql_native_password
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /docker-entrypoint-initdb.d/0_init.sql
              name: mysql-db-cm1
              subPath: 0_init.sql
            - mountPath: /docker-entrypoint-initdb.d/1_init.sql
              name: mysql-db-cm2
              subPath: 1_init.sql
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: mysql-db-cm1
          configMap:
            name: mysql-db-cm1
            items:
              - key: schema.sql
                path: 0_init.sql
        - name: mysql-db-cm2
          configMap:
            name: mysql-db-cm2
            items:
              - key: initialize.sql
                path: 1_init.sql
