k8s/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   service: my-app
  name: my-app
spec:
  type: ClusterIP
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4444
  
  selector:
   service: my-app
