k8s/mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mysql-db
  name: mysql-db
spec:
  ports:
    - name: "mysql"
      port: 3306
      targetPort: 3306
  selector:
   service: mysql-db
